--- a/aa/formulario.html
+++ b/aa/formulario.html
@@ -70,17 +70,37 @@
     </style>
     <script>
             function pesquisarCep(cep){
-                const link = "https://viacep.com.br/ws/" + cep + "/json/?callback=preencherCEP"
+                var validacep = /^[0-9]{8}$/;
+                if(validacep.test(cep)){
+                    const link = "https://viacep.com.br/ws/" + cep + "/json/?callback=preencherCEP"
                 var script = document.createElement('script');
                 script.src = link
                 document.body.appendChild(script);
+                } else {
+                    erro.textContent = "CEP digitado incorretamente!"
+                    document.getElementById("cep").value = ""
+                    document.getElementById("numero").value = ""
+                    document.getElementById("rua").value = ""
+                    document.getElementById("bairro").value = ""
+                    document.getElementById("cidade").value = ""
+                    document.getElementById("estado").value = ""
+                    document.getElementById("cep").value = ""
+                }
             }
             function preencherCEP(conteudo){
+                if ("erro" in conteudo) {
+                    document.getElementById("rua").value = ""
+                    erro.textContent = "CEP não encontrado. Verifique o número e tente novamente."
+                    document.getElementById("bairro").value = ""
+                    document.getElementById("cidade").value = ""
+                    document.getElementById("estado").value = ""
+                    document.getElementById("cep").value = ""
+                } else{
                 document.getElementById("rua").value= conteudo.logradouro;
                 document.getElementById("bairro").value= conteudo.bairro;
                 document.getElementById("cidade").value= conteudo.localidade;
                 document.getElementById("estado").value= conteudo.uf;
-                
+                }
 
             }
     </script>
@@ -105,6 +125,7 @@
 
             <label for="cep">CEP:</label>
             <input type="text" id="cep" onblur="pesquisarCep(this.value)" required>
+            <p id = "erro"></p>
 
             <label for="rua">Rua:</label>
             <input type="text" id="rua" required>
